NM-2910 Flash messages with multiline text now have better layout

--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -1,6 +1,6 @@
 en:
   flash_messages:
-    close_label: "Remove this alert"
+    close_label: "Close"
     authentications:
       already_connected_to_other_user: "The social provider you have chosen is already connected to other user. Please log out first if you want to log in to other account."
       authentication_successful: "Authentication successful."
