--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -306,6 +306,7 @@ en:
       configuration:
         master_lock: 'Master Lock'
         update_lock: 'Update Lock'
+        user_authorization: 'User Authorization'
         basic_configuration: 'Basic Configuration'
         basic_configuration_section:
           placeholder_marketplace_name: 'Your marketplace name'
