--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -88,6 +88,7 @@ en:
     daily: 'Daily'
     weekly: 'Weekly'
     browse: 'Browse'
+    required: 'required'
     day:
       one: "day"
       other: "days"
