NM-2942-document-upload-link-text-is-confusing
* added document requirement label as the label

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1088,6 +1088,7 @@ en:
       archived: "ARCHIVED"
       track_package: 'Track Package'
       return_label: 'Return Label'
+      uploaded_file: "Uploaded file"
     user_recurring_bookings:
       active: "ACTIVE"
       archived: "ARCHIVED"
