--- a/config/locales/errors.en.yml
+++ b/config/locales/errors.en.yml
@@ -63,6 +63,8 @@ en:
           attributes:
             photos:
               too_short: 'You need to add at least one photo to your project'
+            topics:
+              too_short: 'You need to select at least one topic for your project'
   errors:
     messages:
       free: "must be free if no prices are provided"
