--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -514,6 +514,10 @@ en:
           plural:
             payment_transfer: "Payment tranfers"
         transfers_are_generated_automatically: "Transfers are generated automatically depending on your setting in 'Settings > Configuration' for outstanding charges we've recieved on behalf of hosts. The next batch will be generated at about:"
+        payments_awaiting_transfers:
+          zero: "There are no payments awaiting for transfers."
+          one: "There is one payment awaiting for transfer."
+          other: "There are %{count} payments awaiting for transfers."
         charges: "Charges"
         created_at: "Created at"
         transferred_at: "Transferred at"
