--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -505,7 +505,7 @@ en:
         we_are_waiting_for_confirmation: "We are waiting for confirmation whether payout was successful or not."
         payout_via: "Payout via"
         payment_will_go_live: 'Payment will go live. Do you want to continue?'
-        automatic_payout_is_not_available: "Automatic payout is not available - company has not provided PayPal/ACH details"
+        automatic_payout_is_not_available: "Automatic payout is not available - company has not provided payout details"
         automatic_payout_attempts: "Automatic payout attempts"
         no_automatic_payout_attempts: "No automatic payout attempts have been performed yet."
         payout_information: "Payout Information"
