--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -312,6 +312,7 @@ en:
       listing: "Listing"
       listings: "Listings"
       reports: "Reports"
+      projects: "Projects"
 
     analytics:
       no_revenue_yet: 'No revenue yet.'
@@ -340,6 +341,10 @@ en:
         name: "Name"
         description: "Description"
         properties: "Properties"
+      projects:
+        community_reports: "Community reports"
+        week_start: "Starting week"
+        week_end: "Ending week"
 
     settings:
       configuration:
