NM-3179-add-email-address-to-order-confirmation-page
* added email address to order confirmation page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -916,6 +916,7 @@ en:
         shipping_method: 'Shipping Method'
         shipping_method2: 'SHIPPING METHOD'
         billing_address: 'Billing Address'
+        email_address: 'Email Address'
         shipping_address: 'Shipping Address'
         order_summary: 'Order Summary'
         order_details: 'ORDER DETAILS'
