--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -487,6 +487,7 @@ en:
       credit_card_will_be_charged: "Your credit card will be charged when your reservation is confirmed by the host."
       invalid_operation:  "Not a valid reservation operation."
       reservation_cancelled: "You have cancelled your reservation."
+      reservation_not_cancellable: "This reservation can not be canceled anymore."
       reservation_made: "Your reservation has been made! %{message}"
       reservation_not_confirmed: "Your reservation could not be confirmed."
     product:
