--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1183,6 +1183,10 @@ en:
       user_reservations: 'My Bookings'
       user_reservations_count_html: 'My Bookings <span>%{count}</span>'
       user_messages: 'Messages'
+      user_messages_count:
+        zero: 'Messages'
+        one: 'Messages <span>%{count}</span>'
+        other: 'Messages <span>%{count}</span>'
       companies: 'Shop Details'
       products: 'My Products'
       transactables: 'My Listings'
@@ -1259,6 +1263,7 @@ en:
 
     user_profile:
       view_profile: 'View Profile'
+      view_profile_html: 'View<span class="hidden-xs">Profile</span>'
       submit: 'Save'
       sections:
         default: 'Default'
@@ -1560,6 +1565,7 @@ en:
       add_new: 'Add new location'
 
     users:
+      title_html: '<span class="hidden-xs">Manage</span> Admins'
       no_users: 'There are no users to display'
       add_admin_html: 'Add <span class="hidden-xs">Admin</span>'
       columns:
@@ -1573,6 +1579,7 @@ en:
         submit: 'Add Admin'
     waiver_agreements:
       title: 'Waiver Agreements'
+      title_html: '<span class="hidden-xs">Waiver</span> Agreements'
       add_html: 'Add <span class="hidden-xs">Waiver Agreement</span>'
       no_entries: 'There are no waiver agreements to show.'
       agreement: 'Agreement'
@@ -1722,10 +1729,10 @@ en:
       delete: 'Are you sure you want to delete this post?'
 
     buttons:
-      add_post_html: 'Write<span class="visible-lg-inline"> a new post</span>'
+      add_post_html: 'Write<span class="hidden-xs"> a new post</span>'
       write_post: 'Write a new post'
       add_post: 'Add post'
-      visit_blog_html: 'Visit<span class="visible-lg-inline"> my blog</span>'
+      visit_blog_html: 'Visit<span class="hidden-xs"> my blog</span>'
       save: 'Save'
 
       prev_post: 'PREV POST'
@@ -1874,6 +1881,7 @@ en:
     form:
       send: 'Send'
       send_and_resolve: 'Send and Resolve'
+      resolve_html: '<span class="hidden-xs">Send and </span>Resolve'
       message:
         placeholder: 'Please, enter your message'
     states:
@@ -1940,7 +1948,7 @@ en:
   user_messages:
     title: "Messages"
     archived: "Archived"
-    archive_html: "Archive <span class='hidden-xs'>conversation</span>"
+    archive_html: "Archive this conversation"
     inbox:
       one: "Inbox (1)"
       other: "Inbox (%{count})"
@@ -2308,9 +2316,13 @@ en:
     upload: 'Upload new image'
     add_photo: 'Select image file(s)...'
     upload_photo: 'Select image file...'
+    upload_label:
+      one: 'Select a new image...'
+      other: 'Add a new image...'
     drag_label: 'or drag photo here to upload'
-
-  image_edit:
+    upload_on_save: 'Save main form to upload this image.'
+    dropzone_label: 'Drop images here'
+    caption: "Enter caption..."
 
   attachment_upload:
     remove: 'Remove'
