--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -216,6 +216,10 @@ en:
       add_your_company: "Please add your company first"
       company_not_valid: "Please add necessary details to your company first."
       no_bookings: "You haven't made any bookings yet!"
+      seller:
+        updated: 'Seller profile has been updated'
+      buyer:
+        updated: 'Buyer profile has been updated'
       order:
         deleted: 'Order has been deleted.'
         updated: 'Order has been updated.'
