--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2293,6 +2293,7 @@ en:
       users: 'Registered users'
       purchasers: 'Purchasers only'
     max_num_reached: "Max number of attached documents reached"
+    associated_with_order: "Here are the seller attachments associated with your order"
 
   image_upload:
     preview: 'Preview'
