NM-3464 saves user and cc in stripe

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2153,6 +2153,7 @@ en:
       book_it_out_not_available: 'Book It Out option is no longer available'
       exclusive_price_not_available: 'Exclusive Price option is no longer available'
       no_delivery_options: 'There are no delivery options available.'
+      internal_payment: 'Unfortunately we have some internal issues with processing your credit card. Please try again later.'
     payments:
       submit: "Submit a secure payment."
 
