NM-3698 liquid views per locales
* remove Homepage option from Theme in MP Admin
* remove Homepage content option from Theme in MP Admin
* remove Footer option from Theme in MP Admin
* remove Header tab from Theme
* make it possible to edit homepage, homepage content, footer, header,
  search input, latest products via liquid view
* new users will be assigned current I18n.locale instead of
  marketplace's default
* change LiquidView association with TransactableType to many_to_many
* if liquid view is associated with TransactableType but it does not
  make sense then just ignore this association instead of not finding
  view
* the above allowed to remove custom validation in various places to
  prevent situations described above
* associate InstanceView with locales stored in DB via has_many
* fallbacks will now be done to marketplace's default language instead
  of hardcoded english
* respect I18n.locale when rendering email/sms templates
* improve including files in liquid - use the rails way instead of
  custom, ugly solution. As a benefit, we will leverage caching
  mechanism, view paths etc - this will remove duplication.

--- a/config/locales/errors.en.yml
+++ b/config/locales/errors.en.yml
@@ -34,6 +34,10 @@ en:
           attributes:
             service_type:
               not_accessible: "can't associate Service Type with this template, because this template is used by the following workflow alerts, which are irrelevant to Service Type: %{workflow_alerts}"
+            locales_and_transactable_types:
+              already_exists: "there exist at least one object which duplicates locale/transactable type configuration. It means that language/transactable type pairs this view will be ignored. Please either change these other objects or remove from Locales: %{locales} or from Transactable Types: %{transactable_types}. The complete list of objects which collide: %{ids}"
+
+
         workflow_alert:
           attributes:
             template_path:
