NM-3671 Allow admin to use blank as default_signin_provider

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,6 +115,7 @@ en:
     browse: 'Browse'
     required: 'required'
     show: 'Show'
+    none: "None"
     day:
       one: "day"
       other: "days"
