NM-3691 adding custom validators for user profiles

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -498,6 +498,7 @@ en:
       search: "Search"
     manage:
       instance_profile_types:
+        instance_profile_types: 'User Profiles'
         manage: 'Manage User Profiles'
       admin_searchable:
         today: "Today"
