NM-3673 Added translations like generic_lessee_term to be used for lists containing multiple types of services

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -122,6 +122,8 @@ en:
     night:
       one: "night"
       other: "nights"
+    generic_lessee_term: "guest"
+    generic_lessor_term: "host"
   transactable_types:
     locations:
       listings:
