--- a/config/locales/datetimes.en.yml
+++ b/config/locales/datetimes.en.yml
@@ -12,6 +12,7 @@ en:
       short: '%-H:%M'
       long: '%a, %m/%d/%Y %H:%M'
       with_time_zone: '%m/%d/%Y %H:%M (%Z)'
+      day_and_month: '%b %d'
   date:
     yesterday: Yesterday
     formats:
