NM-3773 fixes missing translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1928,6 +1928,7 @@ en:
       cancelled_by_host: "Cancelled by host"
       rejected: "Rejected"
       confirmed: "Confirmed"
+      inactive: "Inactive"
   search:
     pricing_types:
       daily: "Daily"
