NM-3739 separate subscription booking asa a new tab, adds default avaiability template for TT.

--- a/config/locales/pricing.en.yml
+++ b/config/locales/pricing.en.yml
@@ -12,6 +12,9 @@ en:
       fixed:
         label: 'Fixed'
         description: 'Consumer pays one fixed price or a fixed price per unit'
+      subscription:
+        label: 'Subscription'
+        description: 'Customer is charged monthly or weekly'
     price: 'Price'
     required: 'required'
     price_unit:
