--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -184,7 +184,7 @@ en:
           title: "Product Images"
           new_title: "New Product Image"
       dimensions_templates:
-        select: 'Select dimensions template'
+        select: 'Populate dimensions from one of the templates'
         explanation1: 'This will provide a tracking code and a shipping label for your product sale.'
         explanation2: "Select your item's dimensions from the menu below or add your own measures."
       insurance_explanation: "The insurance covers up to $5,000.00 per package. Packages shipped via Canada Post, FedEx Smart Post, UPS Mail Innovations, and USPS First Class Mail are limited to $1,000.00, per package. Leave zero for no insurance."
