NM-3795 Using different titles for availability section in the location modal and in the pricing availability section for a listing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1597,6 +1597,8 @@ en:
       edit: 'Edit'
       remove: 'Remove'
       add_new: 'Add new location'
+      availability:
+        title: 'Availability'
 
     users:
       title_html: '<span class="hidden-xs">Manage</span> Admins'
