NM-1795C Enable option for listings in instance admin/reports; also added destroy option for listings and products in reports

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -352,6 +352,7 @@ en:
         name: "Name"
         description: "Description"
         properties: "Properties"
+        actions: "Actions"
       projects:
         community_reports: "Community reports"
         week_start: "Starting week"
